# lemmy

./: .gitignore  README.md  pyproject.toml
lemmy/: __init__.py  lemmatizer.py  lemmatizer_factory.py  serialization.py  version.py
lemmy/cli/: __main__.py
lemmy/pipe/: component.py
tests/: test_rules.py  test_serialization.py  test_train.py  utils.py
