[tool.poetry]
name = "lemmy3"
version = "3.1.0-alpha"
description = "Lemmy lemmatizer"
homepage = "https://github.com/spacy-hu/lemmy"
readme = "README.md"
keywords = ["nlp", "lemmy", "lemmatizer", "spacy"]
authors = ["Gyorgy Orosz <gyorgy@orosz.link>"]
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Topic :: Text Processing :: Linguistic'
]
license = "MIT"
packages = [
    { include = "lemmy"}
]

[tool.poetry.dependencies]
python = "^3.7.1"
spacy = "^3.1.0"
srsly = "^2.4.1"
typer = "^0.3.2"
conllu = "^4.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-runner = "^5.3.1"

[tool.poetry.scripts]
lemmy = 'lemmy.cli.__main__:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
